--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4165,3 +4165,60 @@ input, select, textarea {
 		transform: scale(1.1);
 		box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
 	  }
+
+	/* ========== ESTILOS PARA EL SLIDER ========== */
+	/* Contenedor del slider */
+	.slider-container {
+		overflow: hidden;
+		width: 100%;
+		cursor: grab;
+		position: relative;
+		padding: 2rem 0;
+	  }
+	
+	  .slider-track {
+		display: flex;
+		flex-wrap: nowrap;
+		width: max-content;
+		animation: scroll 20s linear infinite;
+  		animation-play-state: running;
+	  }
+	
+	  .slider-track .custom-card {
+		height: 420px;
+		display: flex;
+		flex-direction: column;
+		margin: 0 15px;
+	  }
+	
+	  .slider-track .custom-img-container {
+		height: 70%; /* 70% del alto total */
+		overflow: hidden;
+	  }
+	
+	  .slider-track .custom-img-container img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	  }
+	
+	  .slider-track .custom-card .card-content {
+		flex: 1;
+		padding: 0.8rem;
+	  }
+	
+	  @keyframes scroll {
+		0% {
+		  transform: translateX(0);
+		}
+		100% {
+		  transform: translateX(-50%);
+		}
+	  }
+	
+	  /* En pantallas pequeñas ajustar tamaño de card */
+	  @media only screen and (max-width: 600px) {
+		.slider-track .card {
+		  width: 260px;
+		}
+	  }
